--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -9,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
         python-version: [3.8]
     environment: homolog
 
@@ -17,7 +16,10 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Show files
-      run: "ls -l"
+      run: "ls -la"
 
     - name: Show .env
-      run: "echo  ${{ secrets.CONFIG_DOTENV }}"
+      run: "echo ${{ secrets.CONFIG_DOTENV }} > .env"
+
+    - name: Show files
+      run: "ls -la"
