--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: print secrets
       run: |
-          echo $DEV_ENV_FILE &gt;&gt; .env
+          echo $DEV_ENV_FILE > .env
           cat .env
       shell: bash
       env:
